# test_cicd

./: .gitignore  README.md  setup.bash
.circleci/: config.yml
.github/workflows/: build_and_test.yml
my_lib/: CMakeLists.txt  package.xml
my_lib/docs/: Doxyfile.in
my_lib/include/my_lib/: my_lib.hpp
my_lib/src/: my_lib.cpp
my_lib/test/: test_my_lib.cpp
